# wire_scanner

./: .gitignore  app.py  motor_log.txt  pyproject.toml
wire_scanner.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
