[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wire-scanner"
version = "0.1.0"
description = "Real-time sensor data logger for Phidget encoder and RS232"
requires-python = ">=3.9"
dependencies = [
    "flask>=3.0.0",
    "phidget22>=1.15.0",
    "pyserial>=3.5",
    "pandas>=2.0.0",
    "plotly>=5.18.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.hatch.envs.default]
dependencies = [
    "flask",
    "phidget22",
    "pyserial",
    "pandas",
    "plotly",
]

[tool.hatch.envs.default.scripts]
# Run the Flask sensor logger
app = "python app.py"

# Run in development mode with auto-reload
dev = "flask --app app run --debug --host 0.0.0.0 --port 5000"

# View the CSV log data
view-log = "python -c \"import pandas as pd; df = pd.read_csv('sensor_data.csv'); print(df.tail(50))\""

# Clear the log file
clear-log = "python -c \"open('sensor_data.csv', 'w').close(); print('Log cleared')\""

[tool.hatch.envs.test]
dependencies = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[tool.hatch.envs.test.scripts]
test = "pytest {args:tests}"
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=wire_scanner {args:tests}"

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
ignore = [
    "E501", # line too long (handled by black)
    "B008", # do not perform function calls in argument defaults
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]